# review-analysis

./: pyproject.toml
review_analysis/: app.py  stub.py
review_analysis/data/processed/: y_test.csv  y_train.csv
review_analysis/data/raw/: .~lock.amazon_alexa_data.csv#  amazon_alexa_data.csv
review_analysis/datamaker/: make_data.py
review_analysis/models/: MNBClassifier  lregression
review_analysis/modelsmaker/: mnbClassifier.py  modelsdev.py
review_analysis/notebooks/: sentiment-analysis .ipynb  textblob.ipynb
review_analysis/pages/: analyzecsv.py  analyzer.py
