[tool.poetry]
name = "review-analysis"
version = "0.1.0"
description = ""
authors = ["faizeraza <faizeraza4us@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
nltk = "^3.8.1"
streamlit = "^1.30.0"
textblob = "^0.17.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.1"
cleantext = "^1.1.4"
emojis = "^0.7.0"
emoji = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
